# learning-k8s

./: .gitignore  README.md  devbox.json
.github/workflows/: 02-CICD.yaml  02-stateful_flask_CI.yaml
01-hello-world/: .dockerignore  Taskfile.yaml
01-hello-world/deploy/: Deployment.yaml  Service.yaml
01-hello-world/src/: main.py
02-backend-app/: Dockerfile  README.md  docker-compose.yaml
02-backend-app-statefulset/api-fastapi/: .dockerignore  README.md  pyproject.toml  requirements.txt
02-backend-app-statefulset/api-fastapi/deploy/: Fastapi-deployment.yaml  Postgres-statefulset.yaml
02-backend-app-statefulset/api-fastapi/src/: main.py
02-backend-app-statefulset/api-fastapi/tests/: factories.py  test_main.py
02-backend-app-statefulset/api-flask/: .dockerignore  Dockerfile  Makefile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt  wsgi.py
02-backend-app-statefulset/api-flask/src/: provider.py
02-backend-app-statefulset/api-flask/tests/: README.md  status.py  test_provider.py
02-backend-app/deploy/: .env.template  Postgres-deployment.yaml  Taskfile.yaml  kustomization.yaml
02-backend-app/src/: main.py
hello-world/: Dockerfile
hello-world/deploy/: Taskfile.yaml
