[project]
name = "flask-appointment-service"
version = "0.1.0"
description = "Flask appointment service for HMS app"
requires-python = ">=3.10"

[tool.ruff]
# Target Python 3.10
target-version = "py310"

# Same as Black.
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F) and checkstyle (E/W) codes by default
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when using --fix)
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings, like Black.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"