[project]
name = "flask-appointment-service"
version = "0.1.0"
description = "Flask appointment service for HMS app"
requires-python = ">=3.10"

[tool.ruff]
# Target Python 3.10
target-version = "py310"

# Same as Black.
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F) and checkstyle (E/W) codes by default
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when using --fix)
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings, like Black.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
# --cov points to the source code folder
# --cov-report term-missing shows which specific lines aren't tested in the console
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80  # The build will fail if coverage is below 80%